--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Great Migrations PROMULA Application Development System ADS",
   "repository": "https://github.com/kdheepak/vscode-promula-lang",
   "version": "0.0.1",
+  "publisher": "kdheepak",
   "engines": {
     "vscode": "^1.73.0"
   },
