--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,11 +3,6 @@
 
 name: Publish
 
-on:
-  push:
-    tags:
-      - v*.*.*
-
 jobs:
   publish:
     runs-on: ubuntu-latest
@@ -25,5 +20,15 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
       - run: npm install -g vsce
+      - run: npm install
       - run: vsce package
+      - name: Releasing assets
+        if: startsWith(github.ref, 'refs/tags/')
+        uses: softprops/action-gh-release@v1
+        with:
+          files: |
+            promula-*.vsix
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - run: vsce publish -p ${{ secrets.VSCE_TOKEN }}
+        if: startsWith(github.ref, 'refs/tags/')
