--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,7 +2,12 @@
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
 name: Publish
-
+on:
+  push:
+    branches:
+      - main
+    tags:
+      - v*
 jobs:
   publish:
     runs-on: ubuntu-latest
