--- a/language-configuration.json
+++ b/language-configuration.json
@@ -28,12 +28,12 @@
   "folding": {
     "offSide": false,
     "markers": {
-      "start": "^\\s*[dD][eE][fF][iI][nN][eE]\\s+(\\w+)\\b|^\\s*\\*\\s*#region\\b",
-      "end": "^\\s*[eE][nN][dD]\\s+(\\1)\\b|^\\s*\\*\\s*#endregion\\b"
+      "start": "^\\s*[dD][eE][fF][iI][nN][eE]\\s+(\\w+)\\b|^\\s*[dD][oO]\\s+(\\w+)\\b",
+      "end": "^\\s*[eE][nN][dD]\\s+[dD][eE][fF][iI][nN][eE]\\s+(\\1)\\b|^\\s*[eE][nN][dD]\\s+[dD][oO]\\s+(\\1)\\b"
     }
   },
   "indentationRules": {
-    "increaseIndentPattern": "^\\s*[dD][eE][fF][iI][nN][eE]\\s+(\\w+)\\b",
-    "decreaseIndentPattern": "^\\s*[eE][nN][dD]\\s+(\\1)\\b"
+    "increaseIndentPattern": "^\\s*[dD][eE][fF][iI][nN][eE]\\s+(\\w+)\\b|^\\s*[dD][oO]\\s+(\\w+)\\b",
+    "decreaseIndentPattern": "^\\s*[eE][nN][dD]\\s+[dD][eE][fF][iI][nN][eE]\\s+(\\1)\\b|^\\s*[eE][nN][dD]\\s+[dD][oO]\\s+(\\1)\\b"
   }
 }
