--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,8 +24,8 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
+      - run: npm ci
       - run: npm install -g vsce
-      - run: npm install
       - run: vsce package
       - name: Releasing assets
         if: startsWith(github.ref, 'refs/tags/')
